infra/k8s/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
spec:
  tls:
  - hosts:
    - grafana.chatalk.fr
    secretName: chatalk-cert
  rules:
  - host: grafana.chatalk.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
