infra/k8s/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  tls:
  - hosts:
    - prometheus.chatalk.fr
    secretName: chatalk-cert
  rules:
  - host: prometheus.chatalk.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
